test/expected/declare_pfkr_i.out
declare p as pointer to function (x) returning int
                                  ^
35: error: type specifier required since C2X
